--- a/package.json
+++ b/package.json
@@ -1,88 +1,68 @@
 {
-  "name": "monster-rushhour-web",
+  "name": "caffeine-beater",
   "private": true,
-  "version": "1.0.0",
-  "description": "web page of monster-rushhour",
+  "version": "0.1.0",
+  "description": "",
   "author": "gutchom",
   "license": "MIT",
-  "engines": {
-    "node": "^14.16.1",
-    "npm": "^7.10.0"
-  },
   "scripts": {
-    "start": "cross-env NODE_ENV=development run-p -s dev:**",
-    "test": "cross-env NODE_ENV=test ts-jest",
-    "testing": "npm t -- --watch",
-    "lint": "run-s lint:*",
-    "lint:js": "eslint ./src/**/*.ts* --fix",
-    "lint:css": "stylelint ./src/style/**/*.css --fix",
-    "prettier": "prettier",
-    "dev:js": "webpack --mode=development --progress --watch",
-    "dev:css": "postcss ./src/style/*.css -d ./public/css -w",
-    "dev:game": "cd ./game && npm run watch:export",
-    "dev:game:copy": "cpx 'game/bundle/**/*' ./public -w",
-    "dev:asset": "cpx 'src/asset/**/*' ./public -w",
-    "dev:serve": "firebase emulators:start",
-    "dev:serve:sync": "browser-sync start -f ./public -p localhost:5000 --port 3000",
-    "build": "cross-env NODE_ENV=production run-s lint prettier test clean build:**",
-    "build:js": "webpack --mode=production --progress",
-    "build:css": "postcss ./src/style/*.css -d ./public/css",
-    "build:game": "cd game && npm run export && cpx './bundle/**/*' ../public",
-    "build:asset": "cpx 'src/asset/**/*' './public'",
-    "clean": "rimraf ./public/*"
+    "prebuild": "run-s font update",
+    "build": "rimraf ./script && tsc && akashic-cli-scan asset script",
+    "update": "akashic-cli-scan asset && akashic-cli-scan globalScripts",
+    "lint": "eslint -c .eslintrc 'src/**/*.ts' --fix",
+    "watch:export": "npm-watch export",
+    "presandbox": "npm run build",
+    "sandbox": "akashic-sandbox .",
+    "start": "npm-watch sandbox",
+    "preexport": "npm run build",
+    "export": "rimraf ./bundle && akashic-cli-export-html --magnify --bundle --minify -o ./bundle",
+    "test": "jest",
+    "font": "bmpfont-generator font/PixelMplus/PixelMplus12-Regular.ttf ./image/font12.png -f ./text/font.txt --json ./text/font12_glyphs.json --no-anti-alias"
   },
-  "dependencies": {
-    "date-fns": "^2.21.1",
-    "firebase": "^8.4.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+  "watch": {
+    "sandbox": {
+      "patterns": [
+        "audio",
+        "font",
+        "image",
+        "src",
+        "text"
+      ],
+      "extensions": "aac,ogg,jpg,gif,png,ts,txt",
+      "ignore": "image/font12.png"
+    },
+    "export": {
+      "patterns": [
+        "audio",
+        "font",
+        "image",
+        "src",
+        "text"
+      ],
+      "extensions": "aac,ogg,jpg,gif,png,ts,txt",
+      "ignore": "image/font12.png"
+    }
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/preset-env": "^7.14.1",
-    "@babel/preset-react": "^7.13.13",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.0.1",
-    "@types/react": "^17.0.4",
-    "@types/react-dom": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.2.2",
-    "browser-sync": "^2.26.14",
-    "caniuse-lite": "^1.0.30001220",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "cpx": "^1.5.0",
-    "cross-env": "^7.0.3",
-    "cssnano": "^5.0.2",
-    "eslint": "^7.25.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.6",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-standard": "^5.0.0",
-    "eslint-plugin-tsc": "^2.0.0",
-    "jest": "^26.6.3",
+    "@akashic/akashic-cli": "^2.9.1",
+    "@akashic/akashic-cli-export-html": "1.4.3",
+    "@akashic/akashic-cli-export-zip": "0.9.1",
+    "@akashic/akashic-cli-scan": "0.10.0",
+    "@akashic/akashic-engine": "~3.0.4",
+    "@akashic/akashic-sandbox": "~0.17.21",
+    "@akashic/bmpfont-generator": "^4.0.5",
+    "@akashic/headless-akashic": "^1.1.1",
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.34",
+    "@typescript-eslint/eslint-plugin": "3.10.1",
+    "@typescript-eslint/parser": "3.10.1",
+    "eslint": "7.22.0",
+    "eslint-plugin-import": "2.22.1",
+    "jest": "26.6.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.13",
-    "postcss-browser-reporter": "^0.6.0",
-    "postcss-cli": "^8.3.1",
-    "postcss-import": "^14.0.1",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-reporter": "^7.0.2",
-    "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.2",
-    "rimraf": "^3.0.2",
-    "source-map-loader": "^2.0.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended": "^5.0.0",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-order": "^4.1.0",
-    "tailwindcss": "^2.1.2",
-    "ts-jest": "^26.5.5",
-    "ts-loader": "^9.1.1",
-    "typescript": "^4.2.4",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "npm-watch": "^0.9.0",
+    "rimraf": "3.0.2",
+    "ts-jest": "26.5.3",
+    "typescript": "3.9.9"
   }
 }
