update npm script

--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "watch:export": "npm-watch export",
     "presandbox": "npm run build",
     "sandbox": "akashic-sandbox .",
+    "prestart": "npm run count",
     "start": "npm-watch sandbox",
     "preexport": "npm run build",
     "export": "rimraf ./bundle && akashic-cli-export-html --magnify --bundle --minify -o ./bundle",
     "test": "jest",
-    "font": "bmpfont-generator font/PixelMplus/PixelMplus12-Regular.ttf ./image/font12.png -f ./text/font.txt --json ./text/font12_glyphs.json --no-anti-alias"
+    "font": "bmpfont-generator font/PixelMplus/PixelMplus12-Regular.ttf ./image/font12.png -f ./text/font.txt --json ./text/font12_glyphs.json --no-anti-alias",
+    "count": "printf '\\e[36m\n  This project has\\e[35m %s lines\\e[36m of source code!\n\n\\e[m' $(find ./src -name '*.html' -o -name '*.css' -o -name '*.js*' -o -name '*.ts*' -o -name '*.json' | xargs wc -l | tail -1 | awk '{print $1}')"
   },
   "watch": {
     "sandbox": {
